# CloudAI-Autotune

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
autotune/: __init__.py  budgets.py  cli.py  comparison.py  config_mutator.py  database.py  diffing.py  parser.py  recommender.py  runner.py
configs/examples/: sglang_baseline.toml  vllm_baseline.toml  vllm_batch4.toml  vllm_batch8.toml
dashboard/: app.py
reports/examples/: sglang_bench.jsonl  vllm_batch1.json  vllm_batch4.json  vllm_batch8.json
tests/: test_budgets.py  test_cli.py  test_comparison.py  test_config_mutator.py  test_database.py  test_parser.py  test_recommender.py  test_runner.py
