[project]
name = "cloudai-autotune"
version = "0.1.0"
description = "Closed-loop experiment manager for NVIDIA CloudAI benchmarks"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "streamlit>=1.32",
    "pandas>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
autotune = "autotune.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autotune*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
